--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
-name: demux_question_search
-description: A FLutter application made for the screening process for the internship at Demux Academy
+name: question_search
+description: A Flutter application made for the screening process for the internship at Demux Academy
 
 # The following line prevents the package from being accidentally published to
 # pub.dev using `pub publish`. This is preferred for private packages.
